tooling/nargo_cli/tests/snapshots/execution_success/regression_9538/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u1, v1: [u8; 3], v3: [u8; 3]):
    v2 = allocate -> &mut [u8; 3]
    store v1 at v2
    v4 = allocate -> &mut [u8; 3]
    store v3 at v4
    (no terminator instruction)
}
[regression_9538] Circuit output: "two"
